# v7

./: .gitignore  CI_IMAGE_TAG_FINAL_FIX.md  DEPLOYMENT_GUIDE.md  DOCKERFILE_OPTIMIZATION_SUMMARY.md  DOCKER_USER_ID_FIX.md  GHCR_AUTHENTICATION_FIX.md  GHCR_FIX_SUMMARY.md  HEALTH_CHECK_SOLUTION_SUMMARY.md  NETWORK_BUILD_ISSUES_SOLUTION.md  PODMAN_COMPOSE_OPTIMIZATION.md  PODMAN_DEPLOYMENT_ANALYSIS.md  README.md  WIREGUARD_DEPLOYMENT_GUIDE.md  build.conf  compose-correct.env  compose.env.example  docker-compose.yml  fmod.yaml  github-actions-fix-instructions.md  health-check-report-20250625-183454.txt  podman-compose-correct.yml  podman-compose-usage.md  podman-compose.yml  startup-guide.md
.gitea/issue_template/: bug_report.md  feature_request.md
.gitea/pull_request_template/: default.md
.gitea/workflows/: ci.yml
.github/workflows/: ci-cd.yml  ci-cd.yml.backup  proto-sync.yml  simple-build.yml
analytics-engine/: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  env.example  pyproject.toml
analytics-engine/docs/: analytics-engine-structure.md  implementation-examples.md
analytics-engine/python/analytics_engine/: __init__.py
analytics-engine/python/analytics_engine/algorithms/: __init__.py  basic_stats.py  descriptive_stats.py  ml_advanced.py  nlp.py  time_series.py
analytics-engine/scripts/: DEPLOYMENT_GUIDE.md  README.md  build.sh  deploy.sh  manage-service.sh  run.sh  setup-user.sh
analytics-engine/src/: lib.rs  main.rs
analytics-engine/src/api/: grpc_service.rs  mod.rs  types.rs
analytics-engine/src/core/: dispatcher.rs  ml_basic.rs  mod.rs  stats.rs
analytics-engine/src/proto/: analytics.proto
analytics-engine/src/python_bridge/: dispatcher.rs  mod.rs
backend/: .gitignore  Cargo.toml  Dockerfile  FIX.md  PROMPTS.md  PROMPTS_en.md  README.md  README_mvp_crud.md  TESTING.md  build.rs  dev.env
backend/.cargo/: config.toml
backend/.cursor/rules/: claude-cursor-best-prictives-rules.mdc  tech-stack-codeing-best-practives-rules.mdc  tech-stack-rules.mdc  universal-coding-best-practices-rules.mdc  v7rules.mdc
backend/benches/: performance_benchmark.rs
backend/config/: app.toml
backend/data/: .gitkeep
backend/docs/: API_EXPORT_WORKFLOW.md  DATABASE_PERSISTENCE_FIX.md  v6.md  v6_mvp.md  v7.md  v7_mvp.md
backend/docs/api/: README-runtime.md  openapi-runtime.json  runtime-stats.json
backend/examples/: test_grpc_client.rs
backend/frontend/src/api/: client-runtime.ts
backend/frontend/src/types/: api-runtime.ts
backend/proto/: backend.proto
backend/scripts/: build-podman.sh  cleanup_static_analysis.sh  runtime_api_export.sh  setup-wireguard.sh  test_new_slice.sh
backend/scripts/dev/: setup.sh  test.sh
backend/src/: analytics.rs  lib.rs  main.rs  v7.backend.rs
backend/src/core/: error.rs  mod.rs  performance_analysis.rs  registry.rs  result.rs  runtime_api_collector.rs
backend/src/grpc_layer/: mod.rs
backend/src/infra/: mod.rs
backend/src/infra/analytics_client/: mod.rs
backend/src/infra/cache/: mod.rs
backend/src/infra/config/: mod.rs
backend/src/infra/db/: migrations.rs  mod.rs  sqlite.rs
backend/src/infra/di/: mod.rs
backend/src/infra/http/: mod.rs
backend/src/infra/middleware/: mod.rs
backend/src/infra/monitoring/: mod.rs
backend/src/slices/: mod.rs  registry.rs
backend/src/slices/auth/: functions.rs  interfaces.rs  mod.rs  service.rs  types.rs
backend/src/slices/mvp_crud/: functions.rs  interfaces.rs  mod.rs  service.rs  types.rs
backend/src/slices/mvp_stat/: README_mvp_stat.md  functions.rs  interfaces.rs  mod.rs  service.rs  types.rs
backend/tests/: TEST_SUMMARY.md
backend/tests/common/: fixtures.rs  helpers.rs  mod.rs
backend/tests/e2e/: api_test.rs
backend/tests/integration/: basic_test.rs  main.rs  mvp_crud_grpc_tests.rs  mvp_crud_integration_tests.rs  web_test.rs
docs/: DEPLOYMENT_FIXES.md  DEPLOYMENT_GUIDE.md  GHCR_AUTHENTICATION_SOLUTION.md  GHCR_FIX_SUMMARY.md  README.md  backend-test-analysis.md  deployment-fix-summary.md  devops-complete-guide.md  devops.md  directory-structure-design.md  gitea-checklist.md  gitea-runner-podman-container-fix.md  gitea-setup.md  github-actions-best-practices.md  github-actions-test-fix.md  github-container-registry-fix.md  github-secrets-checklist.md  health-check-fix-solution.md  local-deployment-setup.md  quick-reference.md  test_plan.md  user-management-guide.md
docs/development/: ROUTING_FIX_SUMMARY.md  SOLUTION_SUMMARY.md  WEB_OPTIMIZATION_COMPLETE.md  WEB_STRUCTURE_FINAL.md
flutterend/: ARCHITECTURE_OPTIMIZATION.md  NAVIGATION_OPTIMIZATION.md  README.md  TEST_SUMMARY.md  analysis_options.yaml  flutter_prompts_en.md  pubspec.yaml  test_results.json  v7flutterules.md
flutterend/lib/: main.dart
flutterend/test/: widget_test.dart
flutterend/windows/: CMakeLists.txt
scripts/: build-and-push.sh  check-config-consistency.sh  database-backup.sh  debug-containers.sh  deploy-integrated.sh  deploy-v7.sh  deploy.sh  diagnose-deployment-health.sh  diagnose-podman-socket.sh  enhanced-deploy.sh  gitea-init.sh  gitea-runner-fix-commands.sh  local-ci-check.sh  monitoring.sh  quick-config-check.sh  quick-deploy.sh  quick-diagnosis.sh  remote-deploy.sh  setup-wireguard-client.sh  start-backend.sh  start-frontend.sh  start.sh  start_services.sh  test-bridge-vpn.sh  test-ci-fix.sh  test-deployment-script.sh  test-docker-build.sh  test-fix-verification.sh  test-ghcr-auth.sh  test-ghcr-fix.sh  test-github-actions-vars.sh  test-health-check-fix.sh  test-image-tag-fix.sh  test-network-connectivity.sh  test_integration.sh  validate-current-config.sh  verify-ci-consistency.sh  verify-github-auth.sh
web/: .env.development  .env.production  .eslintrc.json  .gitignore  .prettierrc  Dockerfile  MVP_STAT_REGISTRATION_REPORT.md  README.md  WEB_PROMPTS.md  WEB_PROMPTS_en.md  buf.gen.yaml  buf.yaml  eslint.config.js  index.html  main.tsx  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  web_v7.1.md  web_v7.2.md  web_v7.md
web/config/: common.ts  dev-proxy.ts  example.ts  (+6 more)
(+223 files in other folders)
