[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "analytics_engine"
version = "0.1.0"
description = "Rust+Python混合分析引擎，PyO3动态链接最佳实践"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "polars>=0.19.0",
    "pyarrow>=12.0.0",
    # Advanced ML libraries (only when needed)
    "torch>=2.0.0; extra == 'ml'",
    "transformers>=4.30.0; extra == 'ml'",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "lightgbm>=4.0.0",
    "xgboost>=1.7.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.4.0",
]

[tool.maturin]
bindings = "pyo3"
python-source = "python"
module-name = "analytics_engine._rust"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true 