[package]
name = "fmod_slice"
version = "0.7.0"
edition = "2021"
build = "build.rs"

[lib]
name = "fmod_slice"
path = "src/lib.rs"

[[bin]]
name = "fmod_slice"
path = "src/main.rs"

[dependencies]
# 轻量HTTP（仅用于健康检查）
axum = { version = "0.7", default-features = false, features = ["json", "tokio", "http1"] }

# 异步运行时
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# 正则表达式和延迟初始化
regex = "1.10"
lazy_static = "1.4"

# 数据库（仅保留实际使用的SQLite）
rusqlite = { version = "0.30", features = ["bundled"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID生成
uuid = { version = "1.0", features = ["v4", "serde"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 配置
dotenv = "0.15"
config = "0.14"
toml = "0.8"
url = "2.5"
num_cpus = "1.16"

# 测试和数据生成（仅保留实际使用的）
fake = { version = "2.9", features = ["derive"] }
tempfile = "3.8"
rand = "0.8"
rand_distr = "0.4"

# gRPC支持（核心依赖）
tonic = "0.13"
tonic-build = "0.13"
tonic-web = "0.13"
prost = "0.13"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
once_cell = "1.21.3"

# 缓存
redis = { version = "0.24", features = ["tokio-comp"] }

# Base64编码
base64 = "0.21"

# 密码哈希
argon2 = "0.5"

[dev-dependencies]
serial_test = "3.0"
tokio-test = "0.4"

[features]
default = []

[build-dependencies]
tonic-build = "0.13"


